--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<h1>Sobre a barbearia Alura</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+    <meta charset="UTF-8>"
 
-<p>localizada no coração da cidade a <strong>Barbearia Alura</strong>sstrong traz para  mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+ <h1>Sobre a barbearia Alura</h1>
+
+ <p>localizada no coração da cidade a <strong>Barbearia Alura</strong>sstrong traz para  mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
     
-<p><em>Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos cliente"</em></p>
+ <p><em>Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos cliente"</em></p>
 
  <p>Oferecemos profissionais experientes e antenados as mudanças no mundo da moda. O atendimento possui padrão de exelência e agilidade, garantindo qualidade e sat.</p>
+ </html>
