--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     </head>
     <body>
 
-        <h1>Sobre a barbearia Alura</h1>
-
-        <p>localizada no coração da cidade a <strong>Barbearia Alura</strong>sstrong traz para  mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        <h1 style="text-align: center;">Sobre a barbearia Alura</h1>
+         <p style="text-align: center>localizada no coração da cidade a <strong>Barbearia Alura</strong>sstrong traz para  mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        
     
-        <p><em>Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos cliente"</em></p>
+        <p style="font-size: 20PX;" style="text-align: center> <em>Nossa missão é:<strong><"Proporcionar auto-estima e qualidade de vida aos cliente"</strong></em></p>
 
-        <p>Oferecemos profissionais experientes e antenados as mudanças no mundo da moda. O atendimento possui padrão de exelência e agilidade, garantindo qualidade e sat.</p>
+        <p style="text-align: center >Oferecemos profissionais experientes e antenados as mudanças no mundo da moda. O atendimento possui padrão de exelência e agilidade, garantindo qualidade e sat.</p>
     </body>
  </html>
