--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-    
+    <img id="banner" src="banner.jpg"> 
         <h1>Sobre a barbearia Alura</h1>
 
         <p>localizada no coração da cidade a <strong>Barbearia Alura</strong>sstrong traz para  mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
