--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
         <h1>Sobre a barbearia Alura</h1>
 
         <p>localizada no coração da cidade a <strong>Barbearia Alura</strong>sstrong traz para  mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-        <p style="font-size: 20PX;"> <em>Nossa missão é:<strong>"Proporcionar auto-estima e qualidade de vida aos cliente"</strong></em></p>
+        <p id="missão"> <em>Nossa missão é:<strong>"Proporcionar auto-estima e qualidade de vida aos cliente"</strong></em></p>
         <p>Oferecemos profissionais experientes e antenados as mudanças no mundo da moda. O atendimento possui padrão de exelência e agilidade, garantindo qualidade e sat.</p>
 
         <h2>Benefícios</h2>
+        <ul>
+         <li class="itens">Atendimento aos clientes</li>
+         <li class="itens">Espaço diferenciado</li>
+        <li class="itens">Localiação</li>
+        <li class="itens">Profissionais qualificados</li>
+      </ul> 
     </body>
  </html>
  
