--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         <li class="itens">Localiação</li>
         <li class="itens">Profissionais qualificados</li>
       </ul> 
-      </div>div class="benefícios">   
-      </div>
+    </div class="benefícios">   
     </body>
  </html>
  
