--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li class="itens">Profissionais qualificados</li>
       </ul> 
     </div class="benefícios">   
+     <img scr="benefícios.jpg" class="imagembenefícios"> 
     </body>
  </html>
  
