--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
+			Barbearia Alura
 		</header>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
